[gd_scene load_steps=3 format=2]

[ext_resource path="res://TimedPopup.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[node name="TimedPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1620.0
margin_bottom = -980.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PanelContainer" parent="."]
margin_right = 300.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupHBox" type="HBoxContainer" parent="PopupPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureContainer" type="PanelContainer" parent="PopupPanel/PopupHBox"]
margin_right = 86.0
margin_bottom = 86.0
rect_min_size = Vector2( 86, 86 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PopupIcon" type="TextureRect" parent="PopupPanel/PopupHBox/TextureContainer"]
margin_right = 86.0
margin_bottom = 86.0
rect_min_size = Vector2( 64, 64 )
expand = true

[node name="PopupInfoLabel" type="Label" parent="PopupPanel/PopupHBox"]
margin_left = 90.0
margin_top = 36.0
margin_right = 286.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 6
align = 1
valign = 1

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
